# rover0

./: .env.template  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: docker-build.yml  docker-test.yml  docs.yml  lint.yml  ros2-build.yml  security.yml
docker/: .env  docker-compose.yml
docker/libcamera/: Dockerfile
docker/ros2/: Dockerfile
modules/common/: CMakeLists.txt  README.md
modules/common/include/: buffered_intercore_fifo.hpp  endian_utils.hpp  gpio.hpp  message.hpp  mp.hpp  queue.hpp  transport.hpp  uart.hpp
modules/common/src/: endian_utils.cpp  message.cpp  transport.cpp
modules/common/test/: message_test.cpp  queue_test.cpp
modules/lidar/: .clang-format  .gitignore  CMakeLists.txt  README.md
modules/lidar/.devcontainer/: devcontainer.json
modules/lidar/src/: comm.cpp  config.hpp  device.hpp  gpio.hpp  main.cpp  mamePID.hpp  mp.hpp  task.hpp  transport.hpp  uart.hpp  xv11lidar.cpp  xv11lidar.h
modules/lidar/test/: CMakeLists.txt  task_test.cpp  task_tests
modules/lidar/test/mocks/: pico_mock_impl.cpp
modules/lidar/test/mocks/pico/: async_context_poll.h
modules/motor/: .clang-format  .gitignore  CMakeLists.txt  README.md
modules/motor/src/: calibrate.cpp  calibrate.hpp  comm_proc.cpp  comm_proc.hpp  config.hpp  device.hpp  encoder.hpp  encoder.pio  endian_utils.cpp  endian_utils.hpp  gpio.hpp  imu.hpp  logger.cpp  logger.hpp  main.cpp  main_proc.cpp  main_proc.hpp  mamePID.hpp  message.cpp  message.hpp  motor.hpp  motor_driver.cpp  motor_driver.hpp  task.hpp  transport.cpp  uart.hpp
modules/motor/test/: endian_utils_test.cpp  message_test.cpp  queue_test.cpp
modules/motor/tool/calibrate_imu/: README.md  docker-compose.yml  pyproject.toml
modules/motor/tool/calibrate_imu/calibrate_imu/: main.py  transport.py
modules/motor/tool/motorctl/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
modules/motor/tool/motorctl/motorctl/: app.css  app.py  transport.py
modules/rover0/: .gitignore  .ruff.toml  Dockerfile  README.md  entrypoint.sh
modules/rover0/src/rover0_bringup/: CMakeLists.txt  package.xml
modules/rover0/src/rover0_bringup/config/: ekf.yaml  nav2.yaml  rover0_controllers.yaml  slam_toolbox_params.yaml
modules/rover0/src/rover0_bringup/launch/: rover0.launch.py  rover0.mapping.launch.py  rover0_gz.launch.py  rover0_robot.launch.py
modules/rover0/src/rover0_controller/: CMakeLists.txt  package.xml  rover0_controller.xml
modules/rover0/src/rover0_controller/include/rover0_controller/: mecanum_kinematics.hpp  rover0_controller.hpp  wheel_odometry.hpp
modules/rover0/src/rover0_controller/src/: mecanum_kinematics.cpp  rover0_controller.cpp  wheel_odometry.cpp
modules/rover0/src/rover0_description/: CMakeLists.txt  package.xml
modules/rover0/src/rover0_description/gazebo/: rover0_bridge.yaml
modules/rover0/src/rover0_description/launch/: view_robot.launch.py
modules/rover0/src/rover0_description/ros2_control/: rover0.ros2_control.xacro
modules/rover0/src/rover0_description/rviz/: rover0.rviz
modules/rover0/src/rover0_description/urdf/: rover0.urdf.xacro  rover0_description.urdf.xacro  rover0_description_camera.urdf.xacro  rover0_description_common.urdf.xacro  rover0_description_imu.urdf.xacro  rover0_description_lidar.urdf.xacro  rover0_description_wheel.urdf.xacro
modules/rover0/src/rover0_description/world/: my_world.sdf
modules/rover0/src/rover0_gz_description/: CMakeLists.txt  package.xml
modules/rover0/src/rover0_gz_description/config/: rover0_bridge.yaml
modules/rover0/src/rover0_gz_description/urdf/: rover0_gz.urdf.xacro  rover0_gz_description.urdf.xacro  rover0_gz_description_camera.urdf.xacro  rover0_gz_description_imu.urdf.xacro  rover0_gz_description_lidar.urdf.xacro  rover0_gz_description_wheel.urdf.xacro
modules/rover0/src/rover0_hardware_interface/: CMakeLists.txt  package.xml  rover0_hardware_interface.xml
modules/rover0/src/rover0_hardware_interface/include/rover0_hardware_interface/: motorboard_hardware_interface.hpp  rover0_hardware_interface.hpp
modules/rover0/src/rover0_hardware_interface/src/: rover0_hardware_interface.cpp
modules/rover0/src/rover0_robot_description/: CMakeLists.txt  package.xml
modules/rover0/src/rover0_robot_description/urdf/: rover0_robot.urdf.xacro
modules/teleop/: Dockerfile  README.md  entrypoint.sh
modules/teleop/src/teleop_bringup/: CMakeLists.txt  package.xml
modules/teleop/src/teleop_bringup/config/: camera_params.yaml  ov5647_calibration.yaml
modules/teleop/src/teleop_bringup/launch/: teleop.launch.py
modules/uros-agent-lidar/: Dockerfile  README.md  entrypoint.sh
overrides/: docker-compose.override.rover0.dev.yml  docker-compose.override.rover0.mappning.yml  docker-compose.override.teleop.dev.yml  docker-compose.override.uros-agent-lidar.dev.yml
root/boot/firmware/: config.txt
root/etc/: subgid
