<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover0_gz_description</name>
  <version>0.0.0</version>
  <description>Descriptions for rover0 in gazebo sim</description>
  <maintainer email="argon.argon.argon@gmail.com">Masahiro Mada</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_xmllint</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
